--- a/app/views/rooms/_form.html.erb
+++ b/app/views/rooms/_form.html.erb
@@ -3,7 +3,7 @@
 
   <div class="form-inputs">
     <%= f.input :name %>
-    <%= f.input :building_id %>
+    <%= f.association :building %>
     <%= f.input :deleted %>
   </div>
 
