--- a/app/views/faculties/_form.html.erb
+++ b/app/views/faculties/_form.html.erb
@@ -4,6 +4,7 @@
   <div class="form-inputs">
     <%= f.input :name %>
     <%= f.input :url %>
+    <%= f.association :teachers, label_method: :fio %>
     <%= f.input :deleted %>
   </div>
 
