--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -1,4 +1,4 @@
-<p id="notice"><%= notice %></p>
+<!-- <p id="notice"><%= notice %></p> -->
 
 <p>
   <b>Name:</b>
@@ -20,6 +20,42 @@
   <%= @group.deleted %>
 </p>
 
+<table class="table table-hover table-condensed">
+  <tr>
+    <th>Неделя</th>
+    <th>Тип</th>
+    <th>Преподаватель</th>
+    <th>Пара</th>
+    <th>Кабинет</th>
+    <th>Предмет</th>
+    <th>День недели</th>
+    <th>Deleted</th>
+    <th></th>
+    <th></th>
+    <th></th>
+  </tr>
 
-<%= link_to 'Edit', edit_group_path(@group) %> |
-<%= link_to 'Back', groups_path %>
+<% @group.schedules.each do |schedule| %>
+  <tr>
+    <td><%= schedule.parity %></td>
+    <td><%= schedule.occupation %></td>
+    <td><%= schedule.teacher.fio if schedule.teacher %></td>
+    <td><%= schedule.pair.name if schedule.pair %></td>
+    <td><%= schedule.room.name if schedule.room %></td>
+    <td><%= schedule.subject.name if schedule.subject %></td>
+    <td><%= schedule.weekday.name if schedule.weekday %></td>
+    <td><%= schedule.deleted %></td>
+    <td><%= link_to 'Show', schedule %></td>
+    <td><%= link_to 'Edit', edit_schedule_path(schedule) %></td>
+    <td><%= link_to 'Destroy', schedule, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+  </tr>
+<% end %>
+</table>
+
+<br />
+
+<%= link_to 'New Schedule', new_schedule_path, class: "btn" %>
+<br />
+<%= link_to 'Edit', edit_group_path(@group), class: "btn" %>
+<br />
+<%= link_to 'Back', :back, class: "btn" %>
