--- a/app/views/subjects/index.html.erb
+++ b/app/views/subjects/index.html.erb
@@ -3,7 +3,7 @@
 <table>
   <tr>
     <th>Name</th>
-    <th>Faculty</th>
+    <th>Преподаватели</th>
     <th>Deleted</th>
     <th></th>
     <th></th>
@@ -13,7 +13,15 @@
 <% @subjects.each do |subject| %>
   <tr>
     <td><%= subject.name %></td>
-    <td><%= subject.faculty_id %></td>
+    <td>
+      <ul>
+        <% subject.teachers.each do |t| %>
+          <li>
+            <%= link_to t.fio, t %>
+          </li>
+        <% end %>
+      </ul>
+    </td>
     <td><%= subject.deleted %></td>
     <td><%= link_to 'Show', subject %></td>
     <td><%= link_to 'Edit', edit_subject_path(subject) %></td>
