--- a/app/views/workspace/_table.html.erb
+++ b/app/views/workspace/_table.html.erb
@@ -18,12 +18,12 @@
   <tr>
     <td><%= schedule.parity %></td>
     <td><%= schedule.occupation %></td>
-    <td><%= schedule.teacher_id %></td>
-    <td><%= schedule.pair_id %></td>
-    <td><%= schedule.room_id %></td>
-    <td><%= schedule.subject_id %></td>
-    <td><%= schedule.weekday_id %></td>
-    <td><%= schedule.group_id %></td>
+    <td><%= schedule.teacher.fio %></td>
+    <td><%= schedule.pair.name %></td>
+    <td><%= schedule.room.name %></td>
+    <td><%= schedule.subject.name %></td>
+    <td><%= schedule.weekday.name %></td>
+    <td><%= schedule.group.name %></td>
     <td><%= schedule.deleted %></td>
     <td><%= link_to 'Show', schedule %></td>
     <td><%= link_to 'Edit', edit_schedule_path(schedule) %></td>
