--- a/app/views/workspace/index.html.erb
+++ b/app/views/workspace/index.html.erb
@@ -1,7 +1,21 @@
 <h1>Рабочая среда</h1>
-<br />
-<%= select_tag 'level', options_for_select(@levels.collect{ |u| [u.name, u.id] }) %>
 
-<div id="schedule_table">
-    <%= render :partial => "table", :locals => { :schedules => @schedules } %>
-</div>
+
+<table class="table table-hover">
+	<tr>
+		<th>Курс</th>
+		<th>Группа</th>
+		<th></th>
+		<th></th>
+	</tr>
+
+<% @groups.each do |group| %>
+  <tr>
+    <td><%= group.level_id %></td>
+    <td><%= link_to group.name, group %></td>
+    <td><%= link_to 'Edit', edit_group_path(group) %></td>
+    <td><%= link_to 'Destroy', group, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+  </tr>
+<% end %>
+</table>
+
