--- a/app/views/schedules/_form.html.erb
+++ b/app/views/schedules/_form.html.erb
@@ -4,13 +4,12 @@
   <div class="form-inputs">
     <%= f.input :parity %>
     <%= f.input :occupation %>
-    <%= f.input :teacher_id %>
-    <%= f.input :pair_id %>
-    <%= f.input :room_id %>
-    <%= f.input :subject_id %>
-    <%= f.input :weekday_id %>
-    <%= f.input :group_id %>
-    <%= f.input :deleted %>
+    <%= f.association :teacher, label_method: :fio %>
+    <%= f.association :pair %>
+    <%= f.association :room %>
+    <%= f.association :subject %>
+    <%= f.association :weekday %>
+    <%= f.association :group %>
   </div>
 
   <div class="form-actions">
