--- a/app/views/workspace/index.html.erb
+++ b/app/views/workspace/index.html.erb
@@ -1,14 +1,15 @@
 <h1>Рабочая среда</h1>
 
-
 <table class="table table-hover">
+	<thead>
 	<tr>
 		<th>Курс</th>
 		<th>Группа</th>
 		<th></th>
 		<th></th>
 	</tr>
-
+	</thead>
+<tbody>
 <% @groups.each do |group| %>
   <tr>
     <td><%= group.level_id %></td>
@@ -17,5 +18,6 @@
     <td><%= link_to 'Destroy', group, method: :delete, data: { confirm: 'Are you sure?' } %></td>
   </tr>
 <% end %>
+</tbody>
 </table>
 
