--- a/app/views/groups/_form.html.erb
+++ b/app/views/groups/_form.html.erb
@@ -2,6 +2,7 @@
   <%= f.error_notification %>
 
   <div class="form-inputs">
+    <%= f.input :myid %>
     <%= f.input :name %>
     <%= f.input :faculty_id %>
     <%= f.input :level_id %>
