--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -2,6 +2,7 @@
 
 <table>
   <tr>
+    <th>ID</th>
     <th>Name</th>
     <th>Faculty</th>
     <th>Level</th>
@@ -13,6 +14,7 @@
 
 <% @groups.each do |group| %>
   <tr>
+    <td><%= group.myid %></td>
     <td><%= group.name %></td>
     <td><%= group.faculty_id %></td>
     <td><%= group.level_id %></td>
