--- a/app/views/workspace/index.html.erb
+++ b/app/views/workspace/index.html.erb
@@ -1,5 +1,7 @@
 <h1>Рабочая среда</h1>
 
+<%= select_tag 'level', options_for_select(@levels.collect{ |u| [u.name, u.id] }) %>
+
 <table class="table table-hover">
 	<thead>
 	<tr>
@@ -9,7 +11,7 @@
 		<th></th>
 	</tr>
 	</thead>
-<tbody>
+<tbody id="list">
 <% @groups.each do |group| %>
   <tr>
     <td><%= group.level_id %></td>
