--- a/app/assets/stylesheets/schedules.css.scss
+++ b/app/assets/stylesheets/schedules.css.scss
@@ -1,3 +1,7 @@
 // Place all the styles related to the schedules controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+#s2id_schedule_teacher, #s2id_schedule_subject {
+	width: 600px;
+}
