--- a/app/views/schedules/new.html.erb
+++ b/app/views/schedules/new.html.erb
@@ -1,4 +1,25 @@
-<h1>New schedule</h1>
+<% content_for :js do %>
+<script type="text/javascript">
+$(document).ready(function(){
+	$("#schedule_teacher").select2({
+    	placeholder: "Выберите преподователя",
+    	allowClear: true,
+    	width: 'off'
+  	});
+  	$("#schedule_subject").select2({
+    	placeholder: "Выберите предмет",
+    	allowClear: true,
+    	width: 'off'
+  	});
+  	$("#schedule_group").select2({
+    	placeholder: "Выберите группу",
+    	allowClear: true,
+    	width: 'resolve'
+  	});
+});
+</script>
+<% end %>
+<h1>Новое занятие</h1>
 
 <%= render 'form' %>
 
